Updates in routes and schemas
